[cq] Migrate code to Inspection-recommended Java syntax and APIs (#44)